Updated the data analysis for groupon deals using propensity score matching

--- a/propensity_modeling_tutorial.ipynb
+++ b/propensity_modeling_tutorial.ipynb
@@ -21,6 +21,27 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mInit signature:\u001b[0m \u001b[0mCausalModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m      Class that provides the main tools of Causal Inference.\n",
+      "\u001b[0;31mFile:\u001b[0m           /opt/homebrew/anaconda3/envs/propensity/lib/python3.10/site-packages/causalinference/causal.py\n",
+      "\u001b[0;31mType:\u001b[0m           type\n",
+      "\u001b[0;31mSubclasses:\u001b[0m     "
+     ]
+    }
+   ],
+   "source": [
+    "?CausalModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
